# bd2-project

./: .example_env  .gitignore  README.md  run_app.sh
backend/: Dockerfile  pyproject.toml
backend/bufet/: .env  .env_temp  .gitignore  README.md  backend_up.sh  manage.py  pyproject.toml  update.sh
backend/bufet/bufet/: admin_auth.py  asgi.py  auth.py  cookie_auth.py  products.py  settings.py  urls.py  wsgi.py
backend/bufet/bufet/auth/: jwt.py
backend/bufet/bufet/django_auth/: admin_auth.py  cookie_auth.py
backend/bufet/bufet/models/: __init__.py  alergen.py  allergen.py  auth_js.py  clients_avg_per_hour.py  conntact_allergen.py  contact_allergen.py  daily_sales_report.py  ingredient.py  order.py  product.py  product_instance.py  user.py
backend/bufet/bufet/models/reports/: avg_customer_dayhour.py  stock_snapshot.py  today_reports.py
backend/bufet/bufet/routes/: auth.py  cart.py  orders.py  products.py
backend/bufet/bufet/serializers/: allergens_serilizer.py  order_serializer.py  product_serializer.py  product_stock_serializer.py  reports_serializers.py
backend/bufet/bufet/serializers/create/: add_product_serializer.py
backend/bufet/bufet/serializers/create_update/: add_order_serializer.py  add_product_serializer.py  update_stock_serializers.py
backend/bufet/bufet/views/: allergens_view.py  avg_customers_view.py  order_view.py  products_view.py  stock_snap_views.py  stock_view.py  today_reports_view.py  user_view.py
baza/: model.dmd
frontend/: .gitignore  Dockerfile  README.md  auth.config.ts  auth.ts  package-lock.json  package.json
(+141 files in other folders)
